# carboniq

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  README.md  SETUP_LOCAL.md  USER_GUIDE.md  WARP.md  package.json  pnpm-lock.yaml  render.yaml  setup.sh  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/activities/: activities.controller.ts  activities.module.ts  activities.service.spec.ts  activities.service.ts
apps/api/src/calculations/: calculations.controller.ts  calculations.module.ts  calculations.service.ts
apps/api/src/factors/: factors.controller.ts  factors.module.ts  factors.service.ts
apps/api/src/organizations/: organizations.controller.ts  organizations.module.ts  organizations.service.ts
apps/api/src/projects/: projects.controller.ts  projects.module.ts  projects.service.bulk.spec.ts  projects.service.spec.ts  projects.service.ts
apps/web/: middleware.ts  next-intl.config.ts  next.config.ts  package.json
apps/web/app/: globals.css
apps/web/components/: ActivitiesTable.tsx  CurrencyProvider.tsx  CurrencyToggle.tsx  DeleteProjectButton.tsx  EnhancedResultsGraphs.tsx  EnhancedSummary.tsx  Header.tsx  ImportQuickPanel.tsx  LocaleSwitcher.tsx  ProjectActions.tsx  QuickCreate.tsx  ResultsGraphs.tsx  SpendMappingsPanel.tsx
apps/web/i18n/: request.ts
apps/web/messages/: en.json  pt.json
infra/: docker-compose.yml
services/calc/: pyproject.toml
services/calc/app/: main.py
(+27 files in other folders)
